tests/testcases/errors/BCE0022-8.boo
"""
BCE0022-8.boo(5,18): BCE0022: Cannot convert '(int)' to '(int, 2)'.
BCE0022-8.boo(6,14): BCE0022: Cannot convert '(int, 2)' to '(int)'.
"""
a as (int, 2) = (1, 2)
b as (int) = a
